; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_sceneitem_rename_hotkey.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_sceneitem_rename_hotkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i8*, i8* }
%struct.TYPE_6__ = type { i32 }
%struct.dstr = type { i32, i32 }

@.str = private unnamed_addr constant [26 x i8] c"libobs.show_scene_item.%1\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%1\00", align 1
@.str.2 = private unnamed_addr constant [26 x i8] c"libobs.hide_scene_item.%1\00", align 1
@obs = common dso_local global %struct.TYPE_7__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i8*)* @sceneitem_rename_hotkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sceneitem_rename_hotkey(%struct.TYPE_6__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.dstr, align 4
  %6 = alloca %struct.dstr, align 4
  %7 = alloca %struct.dstr, align 4
  %8 = alloca %struct.dstr, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = bitcast %struct.dstr* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %9, i8 0, i64 8, i1 false)
  %10 = bitcast %struct.dstr* %6 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %10, i8 0, i64 8, i1 false)
  %11 = bitcast %struct.dstr* %7 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %11, i8 0, i64 8, i1 false)
  %12 = bitcast %struct.dstr* %8 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %12, i8 0, i64 8, i1 false)
  %13 = call i32 @dstr_copy(%struct.dstr* %5, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @dstr_replace(%struct.dstr* %5, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %14)
  %16 = call i32 @dstr_copy(%struct.dstr* %6, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0))
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @dstr_replace(%struct.dstr* %6, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %17)
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = getelementptr inbounds %struct.dstr, %struct.dstr* %5, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = getelementptr inbounds %struct.dstr, %struct.dstr* %6, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @obs_hotkey_pair_set_names(i32 %21, i32 %23, i32 %25)
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** @obs, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  %30 = load i8*, i8** %29, align 8
  %31 = call i32 @dstr_copy(%struct.dstr* %7, i8* %30)
  %32 = load i8*, i8** %4, align 8
  %33 = call i32 @dstr_replace(%struct.dstr* %7, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %32)
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** @obs, align 8
  %35 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i32 0, i32 1
  %37 = load i8*, i8** %36, align 8
  %38 = call i32 @dstr_copy(%struct.dstr* %8, i8* %37)
  %39 = load i8*, i8** %4, align 8
  %40 = call i32 @dstr_replace(%struct.dstr* %8, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %39)
  %41 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %42 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = getelementptr inbounds %struct.dstr, %struct.dstr* %7, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = getelementptr inbounds %struct.dstr, %struct.dstr* %8, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @obs_hotkey_pair_set_descriptions(i32 %43, i32 %45, i32 %47)
  %49 = call i32 @dstr_free(%struct.dstr* %5)
  %50 = call i32 @dstr_free(%struct.dstr* %6)
  %51 = call i32 @dstr_free(%struct.dstr* %7)
  %52 = call i32 @dstr_free(%struct.dstr* %8)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @dstr_copy(%struct.dstr*, i8*) #2

declare dso_local i32 @dstr_replace(%struct.dstr*, i8*, i8*) #2

declare dso_local i32 @obs_hotkey_pair_set_names(i32, i32, i32) #2

declare dso_local i32 @obs_hotkey_pair_set_descriptions(i32, i32, i32) #2

declare dso_local i32 @dstr_free(%struct.dstr*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
